added infinite floors functionality